--- a/src/components/Display/Display.scss
+++ b/src/components/Display/Display.scss
@@ -1,4 +1,45 @@
+@import '../../variables';
+
+* {
+  box-sizing: border-box;
+}
+
 .display {
-  flex: 1;
   overflow-y: auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 50px;
+
+  .product {
+    height: 400px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__image {
+      height: 250px;
+      max-width: 210px;
+      object-fit: contain;
+      margin-bottom: 10px;
+    }
+
+    &__description {
+      margin: 0;
+      max-height: 70px;
+      flex: 1;
+      text-align: center;
+      color: $text-primary;
+    }
+
+    &__price {
+      margin-top: 10px;
+    }
+
+    &:hover {
+      box-shadow: 4px 8px 12px $background-accent;
+      cursor: pointer;
+    }
+  }
 }
