--- a/src/components/Display/Display.scss
+++ b/src/components/Display/Display.scss
@@ -5,41 +5,88 @@
 }
 
 .display {
-  overflow-y: auto;
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 50px;
+  height: calc(100% - 80px);
+  display: flex;
+  flex-direction: column;
 
-  .product {
-    height: 400px;
+  &__filters {
     padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
-    &__image {
-      height: 250px;
-      max-width: 210px;
-      object-fit: contain;
-      margin-bottom: 10px;
-    }
-
-    &__description {
+    h1 {
+      display: inline;
+      font-size: 1em;
+      vertical-align: middle;
       margin: 0;
-      max-height: 70px;
-      flex: 1;
-      text-align: center;
-      color: $text-primary;
+      margin-right: 20px;
     }
 
-    &__price {
-      margin-top: 10px;
+    button {
+      text-transform: capitalize;
+      margin-right: 20px;
+
+      &.active {
+        background-color: $background-primary;
+        color: $text-secondary;
+      }
+
+      &:hover {
+        background-color: lighten($background-primary, 60);
+      }
+    }
+  }
+
+  &__grid {
+    flex: 1;
+    overflow-y: auto;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 50px;
+  }
+}
+
+.product {
+  height: 400px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__image {
+    height: 250px;
+    max-width: 210px;
+    object-fit: contain;
+    margin-bottom: 10px;
+  }
+
+  &__description {
+    margin: 0;
+    max-height: 70px;
+    flex: 1;
+    text-align: center;
+    color: $text-primary;
+  }
+
+  &__details {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__rating {
+    span,
+    img {
+      vertical-align: middle;
     }
 
-    &:hover {
-      box-shadow: 4px 8px 12px $background-accent;
-      cursor: pointer;
+    img {
+      object-fit: contain;
+      margin-right: 6px;
     }
+  }
+
+  &:hover {
+    box-shadow: 4px 8px 12px $background-accent;
+    cursor: pointer;
   }
 }
