--- a/src/components/Display/Display.scss
+++ b/src/components/Display/Display.scss
@@ -8,36 +8,50 @@
   height: calc(100% - 80px);
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 
   &__filters {
     padding: 20px;
 
-    h1 {
-      display: inline;
-      font-size: 1em;
-      vertical-align: middle;
-      margin: 0;
-      margin-right: 20px;
-    }
+    .display__filter {
+      margin-bottom: 20px;
 
-    button {
-      text-transform: capitalize;
-      margin-right: 20px;
-
-      &.active {
-        background-color: $background-primary;
-        color: $text-secondary;
+      h1 {
+        width: 80px;
+        display: inline-block;
+        font-size: 1em;
+        vertical-align: middle;
+        margin: 0;
       }
 
-      &:hover {
-        background-color: lighten($background-primary, 60);
+      button {
+        text-transform: capitalize;
+        min-width: 110px;
+
+        &.active {
+          background-color: $background-primary;
+          color: $text-secondary;
+        }
+
+        &:hover {
+          background-color: lighten($background-primary, 60);
+        }
+      }
+
+      input {
+        width: 240px;
+      }
+
+      h1,
+      button,
+      input {
+        margin-right: 20px;
       }
     }
   }
 
   &__grid {
     flex: 1;
-    overflow-y: auto;
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -70,7 +84,7 @@
   &__details {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   &__rating {
