--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,10 +9,23 @@
   color: $text-secondary;
 
   img {
-    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    margin-left: 20px;
   }
 
   &__title {
-    margin-left: 10px;
+    margin-left: 20px;
+  }
+
+  &__wishlist {
+    margin-left: auto;
+    padding: 20px;
+    cursor: pointer;
+
+    &.active {
+      color: $background-accent;
+      text-decoration: underline;
+    }
   }
 }
