--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,9 +1,7 @@
-$background-primary: #50394c;
-$background-secondary: #b2b2b2;
-$background-accent: #ffef96;
+$primary-color: #50394c;
+$secondary-color: #b2b2b2;
+$accent-color: #ffef96;
 
-$text-primary: #343434;
-$text-secondary: #faf9f6;
+$text-light: #faf9f6;
 
-$border-primary: #c0c0c0;
-$border-secondary: #e5e4e2;
+$border-light: #c0c0c0;
